# avocet

./: .clang-format  .gitignore  .gitmodules  README.md  pyproject.toml
.ci/: console_build_debug.sh  console_build_release.sh  console_debug.sh  console_release.sh
.github/actions/console_ros/: Dockerfile  action.yml  ros_entrypoint.sh
.github/workflows/: console_build_debug.yml  console_build_release.yml  console_debug.yml  console_release.yml
agv/docker/: Dockerfile
agv/src/: README.md
agv/src/agv_node/: CMakeLists.txt  package.xml
agv/src/avocet_agv/: CMakeLists.txt  package.xml
agv/src/avocet_agv/config/: config.yaml
agv/src/avocet_agv/include/: image_capture.h
agv/src/avocet_agv/src/: image_capture.cpp  image_node.cpp  imu_capture.cpp  imu_node.cpp  main.cpp
agv/src/avocet_imu/: CMakeLists.txt  package.xml
agv/src/avocet_imu/config/: config.yaml
agv/src/avocet_imu/include/avocet_imu/: imu_capture.h
agv/src/avocet_imu/src/: imu_capture.cpp  imu_node.cpp
agv/src/drive_controllers/: CMakeLists.txt  package.xml
agv/src/drive_controllers/config/: config.yaml
agv/src/drive_controllers/include/: driver_controllers.h
agv/src/drive_controllers/src/: driver_controllers.cpp  driver_controllers_node.cpp
console/avc_image_node/: CMakeLists.txt  package.xml
console/docker/: Dockerfile
console/docker/orbslam2/: Dockerfile
console/docker/vinsmono/: Dockerfile
console/src/avc_image_node/: CMakeLists.txt  package.xml
console/src/avc_image_node/launch/: avc_image_node.launch
console/src/avocet_urdf/: CMakeLists.txt  package.xml
console/src/avocet_urdf/launch/: robot.launch
console/src/avocet_urdf/src/: CamRobot.stl  robot.urdf
console/src/console_teleop/: CMakeLists.txt  package.xml
console/src/console_teleop/include/console_teleop/: console_teleop.h
console/src/console_teleop/src/: console_teleop.cpp  main.cpp
hardware/CamRobot/: CamRobot.scad  CamRobot.stl  RaspiMount.scad
hardware/src/CamRobot/: RaspiMount.scad  RaspiMount_protoboard.scad
hardware/src/SlipRing/: Frame.scad  HalfShaft.scad  Receiver.scad  Shaft.scad  SlipRing.scad  Util.scad
hardware/stl/CamRobot/: RaspiMount.stl  RaspiMount_protoboard.stl  RaspiMount_protoboard_dualcam.stl
hardware/stl/SlipRing/: Receiver.stl  SlipRing.stl
py/: rectify_stl.py
